# mini_rust_os_kernel

./: Cargo.toml  Makefile  x86_64-rustbucket_os.json
kernel/arch/x86_64/: grub.cfg  linker.ld
kernel/arch/x86_64/boot/: boot.asm
