[package]
name = "rust_kernel"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["staticlib"]
path = "kernel/lib.rs"

[dependencies]
rlibc = "1.0"
multiboot2 = { git = "https://github.com/Adam-Gleave/multiboot2-rs" }
bitflags = "1.0.4"

[dependencies.lazy_static]
version = "0.2.1"
features = ["spin_no_std"]

[profile.dev]
debug = true